--- a/sauces.second.html
+++ b/sauces.second.html
@@ -21,44 +21,44 @@
     <title>Cucina</title>
   </head>
   <body>
-    <section class="sauses-second">
-      <div class="container sauses-second-container">
+    <section class="sauces-second">
+      <div class="container sauces-second-container">
         <h2 class="visually-hidden">Menu</h2>
-        <button type="button" class="sauses-second-up-down btn">
-          <svg class="sauses-second-up-down-icon" width="23" height="12">
+        <button type="button" class="sauces-second-up-down btn">
+          <svg class="sauces-second-up-down-icon" width="23" height="12">
             <use href="./images/sprite-btn.svg#icon-up"></use>
           </svg>
         </button>
         <ul class="sauses-second-list list">
-          <li class="sauses-second-item">
-            <div class="sauses-second-img"></div>
-            <div class="sauses-second-wrap">
-              <h3 class="sauses-second-title">Classic sauce</h3>
-              <p class="sauses-second-desc">
+          <li class="sauces-second-item">
+            <div class="sauces-second-img"></div>
+            <div class="sauces-second-wrap">
+              <h3 class="sauces-second-title">Classic sauce</h3>
+              <p class="sauces-second-desc">
                 The most delicate taste of tomatoes, combined with branded
                 spices and white wine, will make your dish incredibly tasty.
               </p>
-              <button class="sauses-second-btn btn" type="button">
+              <button class="sauces-second-btn btn" type="button">
                 Buy now
               </button>
             </div>
           </li>
-          <li class="sauses-second-item">
-            <div class="sauses-second-wrap">
-              <h3 class="sauses-second-title">Spicy sauce</h3>
-              <p class="sauses-second-desc">
+          <li class="sauces-second-item">
+            <div class="sauces-second-wrap">
+              <h3 class="sauces-second-title">Spicy sauce</h3>
+              <p class="sauces-second-desc">
                 For thrill-seekers, we added hot chili pepper to our sauce, it
                 also reveals all the tastes and aromas of the sauce well.
               </p>
-              <button class="sauses-second-btn btn" type="button">
+              <button class="sauces-second-btn btn" type="button">
                 Buy now
               </button>
             </div>
-            <div class="sauses-second-img"></div>
+            <div class="sauces-second-img"></div>
           </li>
         </ul>
-        <button type="button" class="sauses-second-up-down btn">
-          <svg class="sauses-second-up-down-icon" width="23" height="12">
+        <button type="button" class="sauces-second-up-down btn">
+          <svg class="sauces-second-up-down-icon" width="23" height="12">
             <use href="./images/sprite-btn.svg#icon-down"></use>
           </svg>
         </button>
