--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
               width="432"
               height="577"
             />
+            <svg class="hero-icon-img" width="6" height="6">
+              <use href="./images/svg-icons.svg#icon-circle"></use>
+            </svg>
             <ul class="hero-soc-list list">
               <li class="hero-soc-item">
                 <a href="https://www.tumblr.com/" class="hero-link link">
