corrected class in footer - footer-logo-icon

--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@
         <div class="container footer-container">
             <div class="footer-navigation-container">
                 <nav class="footer-navigation">
-                    <svg class="logo-icon" width="32" height="32">
+                    <svg class="footer-logo-icon" width="32" height="32">
                         <use href="./images/sprite.svg#icon-logo"></use></svg>
                         <a href="" class="footer-logo link">CUCINA</a>
                     <ul class="footer-list list">
