--- a/video.html
+++ b/video.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <section class="video"> 
-            <div class="container-video">
+            <div class="container container-video">
                 <ul class="video-list">
                     <li class="video-item">
                         <div class="video-container">
