--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             </ul>
           </div>
           <div class="hero-right-container">
-            <img class="hero-img"
+            <img
+              class="hero-img"
               src="./images/hero.png"
               alt="Pasta Sause"
               width="432"
@@ -113,16 +114,16 @@
       <section class="sauces-section">
         <ul class="sauces-list">
           <li class="sauces-item">
-            <img src="./images/tomatoes.jpg" alt="tomatoеs" width="349"/>
+            <img src="./images/tomatoes.jpg" alt="tomatoеs" width="349" />
             <h2 class="sauces-subtitle">Spicy sauce</h2>
             <p class="sauces-text">
-              For thrill-seekers, we added hot chili pepper to our sauce, it also
-              reveals all the tastes and aromas of the sauce well.
+              For thrill-seekers, we added hot chili pepper to our sauce, it
+              also reveals all the tastes and aromas of the sauce well.
             </p>
             <button type="button" class="sauces-button">Buy now</button>
           </li>
           <li class="sauces-item">
-            <img src="./images/pappers.jpg" alt="pappers" width="349"/>
+            <img src="./images/pappers.jpg" alt="pappers" width="349" />
             <h2 class="sauces-subtitle">Classic sauce</h2>
             <p class="sauces-text">
               The most delicate taste of tomatoes, combined with branded spices
@@ -131,7 +132,7 @@
             <button type="button" class="sauces-button">Buy now</button>
           </li>
         </ul>
-      </section> 
+      </section>
       <!--------- section sauces second --------->
       <section class="sauces-second">
         <div class="container sauces-second-container">
@@ -176,122 +177,171 @@
           </button>
         </div>
       </section>
-    <!------------ video------------->
-      <section class="video"> 
-          <div class="container-video">
-              <ul class="video-list">
-                  <li class="video-item">
-                      <div class="video-container">
-                      <img src="./images/pepper-pasta-desktop.jpg" alt="bell-pepper-pasta" width="442">
-                      <div class="border-icon">
-                      <svg class="video-icon" width="15" height="20"><use href="./images/icon-video.svg#icon-icon-play-video"></use></svg>
-                      </div>
-                      </div>
-                      <h3 class="title-video">Bell pepper pasta</h3>
-                  </li>
-                  <li class="video-item">
-                      <div class="video-container">
-                          <img src="./images/tomato-pasta-desktop.jpg" alt="bell-pepper-pasta" width="442">
-                          <div class="border-icon">
-                          <svg class="video-icon" width="15" height="20"><use href="./images/icon-video.svg#icon-icon-play-video"></use></svg>
-                          </div>
-                          </div>
-                      <h3 class="title-video">Tomato paste</h3>
-                  </li>
-              </ul>
-          </div>
+      <!------------ video------------->
+      <section class="video">
+        <div class="container container-video">
+          <ul class="video-list">
+            <li class="video-item">
+              <div class="video-container">
+                <img
+                  src="./images/pepper-pasta-desktop.jpg"
+                  alt="bell-pepper-pasta"
+                  width="442"
+                />
+                <div class="border-icon">
+                  <svg class="video-icon" width="15" height="20">
+                    <use
+                      href="./images/icon-video.svg#icon-icon-play-video"
+                    ></use>
+                  </svg>
+                </div>
+              </div>
+              <h3 class="title-video">Bell pepper pasta</h3>
+            </li>
+            <li class="video-item">
+              <div class="video-container">
+                <img
+                  src="./images/tomato-pasta-desktop.jpg"
+                  alt="bell-pepper-pasta"
+                  width="442"
+                />
+                <div class="border-icon">
+                  <svg class="video-icon" width="15" height="20">
+                    <use
+                      href="./images/icon-video.svg#icon-icon-play-video"
+                    ></use>
+                  </svg>
+                </div>
+              </div>
+              <h3 class="title-video">Tomato paste</h3>
+            </li>
+          </ul>
+        </div>
       </section>
-    <!----------- slider ------------>
-    <section class="slider">
-      <div class="container input-slade">
-        <input type="radio" name="point" id="slide1" checked />
-        <input type="radio" name="point" id="slide2" />
-        <input type="radio" name="point" id="slide3" />
-        <div class="sliders">
-          <div class="slides slide1"></div>
-          <div class="slides slide2"></div>
-          <div class="slides slide3"></div>
+      <!----------- slider ------------>
+      <section class="slider">
+        <div class="container input-slade">
+          <input type="radio" name="point" id="slide1" checked />
+          <input type="radio" name="point" id="slide2" />
+          <input type="radio" name="point" id="slide3" />
+          <div class="sliders">
+            <div class="slides slide1"></div>
+            <div class="slides slide2"></div>
+            <div class="slides slide3"></div>
+          </div>
+          <div class="controls">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+          </div>
+          <button
+            class="button-right btn btn-slider"
+            onclick="this.classList.toggle('one')"
+          >
+            <svg class="button-svg">
+              <use
+                class="btn-icon"
+                href="./images/symbol-defs.svg#icon-ep_arrow-right"
+              ></use>
+            </svg>
+          </button>
+          <button class="button-left btn btn-slider" type="button">
+            <svg class="button-svg">
+              <use
+                class="btn-icon"
+                href="./images/symbol-defs.svg#icon-ep_arrow-right"
+              ></use>
+            </svg>
+          </button>
         </div>
-        <div class="controls">
-          <label for="slide1"></label>
-          <label for="slide2"></label>
-          <label for="slide3"></label>
-        </div>
-        <button class="button-right btn btn-slider" onclick="this.classList.toggle('one')">
-          <svg class="button-svg">
-            <use class="btn-icon" href="./images/symbol-defs.svg#icon-ep_arrow-right"></use>
-          </svg>
-        </button>
-        <button class="button-left btn btn-slider" type="button">
-          <svg class="button-svg">
-            <use class="btn-icon" href="./images/symbol-defs.svg#icon-ep_arrow-right"></use>
-          </svg>
-        </button>
-      </div>
-    </section>
+      </section>
     </main>
     <!----------- footer ----------->
     <footer class="footer">
       <div class="container footer-container">
-          <div class="footer-navigation-container">
-              <nav class="footer-navigation">
-                  <svg class="footer-logo-icon" width="32" height="32">
-                      <use href="./images/sprite.svg#icon-logo"></use></svg>
-                      <a href="" class="footer-logo link">CUCINA</a>
-                  <ul class="footer-list list">
-                      <li class="footer-item"><a href="" class="footer-link link">Home</a></li>
-                      <li class="footer-item"><a href="" class="footer-link link">Store</a></li>
-                      <li class="footer-item"><a href="" class="footer-link link">Recipes</a></li>
-                      <li class="footer-item"><a href="" class="footer-link link">Gallery</a></li>
-                  </ul>
-              </nav>
-          </div> 
-          <div class="address-container">                     
-              <address class="address">
-                  <ul class="footer-address-list list">
-                      <li class="footer-address-item">
-                          <a href="" class="footer-address-link link">
-                          <svg class="footer-address-icon" width="24" height="24">
-                          <use href="./images/sprite.svg#icon-location"></use></svg></a>
-                          <p class="footer-address">Elvia Elviaveien 1, 1234 Oslo</p></li>
-                      <li class="footer-address-item">
-                          <a href="" class="footer-address-link link">
-                          <svg class="footer-address-icon" width="24" height="24">
-                          <use href="./images/sprite.svg#icon-email"></use></svg></a>
-                          <a href="mailto:willie.jennings@example.com" class="footer-mail link">willie.jennings@example.com</a></li>
-                  </ul>                    
-              </address>
-          </div>
-          <div>
-              <ul class="footer-soc-list list">
-                  <li class="footer-soc-item">
-                      <a href="" class="footer-soc-link link">
-                      <svg class="footer-soc-icon" width="24" height="24">
-                      <use href="./images/sprite.svg#icon-telegram"></use>
-                      </svg></a></li>
-                  <li class="footer-soc-item">
-                      <a href="" class="footer-soc-link link">
-                      <svg class="footer-soc-icon" width="24" height="24">
-                      <use href="./images/sprite.svg#icon-instagram"></use>
-                      </svg></a></li>
-                  <li class="footer-soc-item">
-                      <a href="" class="footer-soc-link link">
-                      <svg class="footer-soc-icon" width="24" height="24">
-                      <use href="./images/sprite.svg#icon-youtube"></use>
-                      </svg></a></li>
-                  <li class="footer-soc-item">
-                      <a href="" class="footer-soc-link link">
-                      <svg class="footer-soc-icon" width="24" height="24">
-                      <use href="./images/sprite.svg#icon-twetter"></use>
-                      </svg></a></li>
-              </ul>
-          </div>
-          <p class="footer-text">By using this website, you agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></p>                    
+        <div class="footer-navigation-container">
+          <nav class="footer-navigation">
+            <svg class="footer-logo-icon" width="32" height="32">
+              <use href="./images/sprite.svg#icon-logo"></use>
+            </svg>
+            <a href="" class="footer-logo link">CUCINA</a>
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a href="" class="footer-link link">Home</a>
+              </li>
+              <li class="footer-item">
+                <a href="" class="footer-link link">Store</a>
+              </li>
+              <li class="footer-item">
+                <a href="" class="footer-link link">Recipes</a>
+              </li>
+              <li class="footer-item">
+                <a href="" class="footer-link link">Gallery</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="address-container">
+          <address class="address">
+            <ul class="footer-address-list list">
+              <li class="footer-address-item">
+                <a href="" class="footer-address-link link">
+                  <svg class="footer-address-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-location"></use></svg
+                ></a>
+                <p class="footer-address">Elvia Elviaveien 1, 1234 Oslo</p>
+              </li>
+              <li class="footer-address-item">
+                <a href="" class="footer-address-link link">
+                  <svg class="footer-address-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-email"></use></svg
+                ></a>
+                <a
+                  href="mailto:willie.jennings@example.com"
+                  class="footer-mail link"
+                  >willie.jennings@example.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-telegram"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-youtube"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item">
+              <a href="" class="footer-soc-link link">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-twetter"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <p class="footer-text">
+          By using this website, you agree to the <b>Terms of Service</b> and
+          <b>Privacy Policy</b>
+        </p>
       </div>
-  </footer> 
+    </footer>
 
-  <!------- MODAL WINDOW ------>
+    <!------- MODAL WINDOW ------>
 
-<script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
