--- a/modal.html
+++ b/modal.html
@@ -21,7 +21,7 @@
     <title>Cucina</title>
     </head>
 <!------- MODAL WINDOW ------>
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal-close-button" data-modal-close>
         <svg class="modal-close-button-icon" width="17" height="17">
@@ -29,7 +29,7 @@
         </svg>
         </button>
         <p class="modal-title header-title">Leave your contacts and we will call you back</p>
-        <form action="#" class="modal-form"> -->
+        <form action="#" class="modal-form">
         
     <script src="./js/modal.js"></script>
     <main></main>
