--- a/header-nik.html
+++ b/header-nik.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style-nik.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -47,10 +47,8 @@
       </nav>
       <button class="header-button btn" type="button">Contact us</button>
       <button type="button" class="burger js-open-menu"><img class="burger-img" src="./images/icon-humburger.png" alt="./burger-menu"></button>
-
     </div>
-    <div class="modal js-menu-container">
-      
+    <div class="modal js-menu-container">      
         <div class="container">
           <div class="mod-box-1">
             <div class="logo-box">
@@ -58,8 +56,7 @@
                <a class="icon-logo-mod link" href="">CUCINA</a>
             </div>
             <button class="close-btn js-close-menu" type="button"><a href=""><img src="./images/icon-close.svg" alt=""></a></button>
-          </div>
-          
+          </div>          
           <div class="mod-nav-box">
             <ul class="mod-nav-list">
               <li class="item"><a class="nav-mod-name" href="">Home</a></li>
